[gd_scene load_steps=9 format=2]

[ext_resource path="res://pause_pop_up.png" type="Texture" id=1]
[ext_resource path="res://continue_pause_button3.png" type="Texture" id=2]
[ext_resource path="res://continue_pause_button1.png" type="Texture" id=3]
[ext_resource path="res://continue_pause_button2.png" type="Texture" id=4]
[ext_resource path="res://exit_button2.png" type="Texture" id=5]
[ext_resource path="res://exit_button3.png" type="Texture" id=6]
[ext_resource path="res://exit_button1.png" type="Texture" id=7]
[ext_resource path="res://pause_screen.gd" type="Script" id=8]

[node name="pause_screen" type="Node2D"]
script = ExtResource( 8 )

[node name="TextureRect" type="ColorRect" parent="."]
anchor_bottom = 0.193
margin_right = 1024.0
margin_bottom = 648.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_lock_": true
}

[node name="PausePopUp" type="Sprite" parent="."]
position = Vector2( 512, 324 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 430.0
margin_top = 296.0
margin_right = 590.0
margin_bottom = 396.0

[node name="continue" type="TextureButton" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="exit" type="TextureButton" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 160.0
margin_bottom = 100.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
